--- a/index.html
+++ b/index.html
@@ -101,23 +101,8 @@
 
       <div class="spacer0"></div> <div class="spacer0"></div>
 
-      <!-- Checkboxes for 1, 3 or endless rounds -->
-      <form class="row checkbox justify-content-center" name="checkboxes">
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <div id="modeTitle">Choose Game Mode:&nbsp;&nbsp;&nbsp;&nbsp;</div>
-        <label>Best of Three
-          <input type="radio" name="radio" id="bestOfThree">
-          <span class="checkmark"></span>
-        </label>&nbsp;&nbsp;&nbsp
-        <label>Best of Five
-          <input type="radio" name="radio" id="bestOfFive">
-          <span class="checkmark"></span>
-        </label>&nbsp;&nbsp;&nbsp;
-        <label>Endless Game
-          <input type="radio" name="radio" id="endlessGame">
-          <span class="checkmark"></span>
-        </label>&nbsp;&nbsp;&nbsp;&nbsp;
-      </form> 
+      <!-- game Mod buttons -> created in buttonMaker() -->
+      <div class="row justify-content-center align-items-center" id="modeButtonDiv"></div> 
  
       <div class="spacer0"></div> <div class="spacer0"></div>
 
