--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="index.html">Rock Paper Scissors</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Black Jack</a>
+              <a class="nav-link" href="blackjack.html">Black Jack</a>
             </li>
           </ul>
         </div>
@@ -56,7 +56,7 @@
               <a class="nav-link" href="index.html">Rock Paper Scissors</a>
             </div>
             <div class="nav-item col-12 mt-3">
-              <a class="nav-link" href="#">Black Jack</a>
+              <a class="nav-link" href="blackjack.html">Black Jack</a>
             </div>
           </div>
           <div class="col-12 spacer2"></div>
