--- a/blackjack.html
+++ b/blackjack.html
@@ -74,31 +74,38 @@
   </section>
 
   <section id="mainGame">
-    <div class="container gameframe pic-frame">
-
-      <div>
-        <button class="gamebuttons" id="newGame" onclick="newGame()">New Game</button>
-        <button class="gamebuttons" id="hitMe" onclick="hitMe()">Hit Me</button>
-        <button class="gamebuttons" id="stand" onclick="stand()">Stand</button>
+    <div class="container gameframe pic-frame-main">
+      <div class="spacer0"></div>
+      <div class="row justify-content-center">
+        <div class="col-10">
+          <div class="scores">Dealer Score: <span id="dealerPoints"></span></div>
+          <div class="dealer-frame" id="dealerCards"></div>
+          <div class="spacer1"></div>
+          <div class="scores">Player Score: <span id="playerPoints"></span></div>
+          <div class="player-frame" id="playerCards"></div>
+        </div>
       </div>
-
-      <div class="spacer1" id="gameResult"></div>
-
-      <div class="row">
-        <div class="col-2">player Cards</div>
-        <div class="col-4" id="playerCards"></div>
-        <div class="col-2">dealer Cards</div>
-        <div class="col-4" id="dealerCards"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-2">player Points</div>
-        <div class="col-4" id="playerPoints"></div>
-        <div class="col-2">dealer Points</div>
-        <div class="col-4" id="dealerPoints"></div>
-      </div>
-
     </div>
+
+    <div class="container">
+      <div class="row justify-content-between">
+        <div class="buttons">
+          <button class="gamebuttons" id="newGame" onclick="newGame()">New Game</button>
+          <button class="gamebuttons" id="hitMe" onclick="hitMe()">Hit Me</button>
+          <button class="gamebuttons" id="stand" onclick="stand()">Stand</button>
+        </div>
+        <div id="coinDisplay"></div>
+        <div>
+          <label>your bet: <input type="text" id="bet" size="5"/></label>
+          <span id="balance">Current Balance: </span><span id="money"></span>
+        </div>
+      </div>
+    </div>      
+
+      
+    </div>
+
+    <div class="container spacer1 pic-frame" id="gameResult"></div>
   </section>
 
 
