--- a/blackjack.html
+++ b/blackjack.html
@@ -74,15 +74,19 @@
   </section>
 
   <section id="mainGame">
-    <div class="row justify-content-center" style="padding-top:10px;">
-      <div class="col-6 gameframe pic-frame-main">
+    <div class="row justify-content-center" style="padding-top:10px">
+      <div class="gameframe fixedWidth pic-frame-main">
         <div class="spacer0"></div>
         <div class="row justify-content-center">
           <div class="col-9">
-            <div class="scores">Dealer Score: <span id="dealerPoints"></span></div>
+            <div class="container row">
+              <div id="dealerScore"></div><div id="dealerPoints"></div>
+            </div>
             <div class="dealer-frame" id="dealerCards"></div>
             <div class="spacer1"></div>
-            <div class="scores">Player Score: <span id="playerPoints"></span></div>
+            <div class="container row">
+              <div id="playerScore"></div><div id="playerPoints"></div>
+            </div>
             <div class="player-frame" id="playerCards"></div>
           </div>
           <div class="spacer0"></div>
@@ -91,27 +95,29 @@
     </div>
 
     <div class="row justify-content-center">
-      <div class="container row col-6 justify-content-between align-items-center" style="padding: 0 0 0 0">
+      <div class="row fixedWidth justify-content-between align-items-center" style="padding: 0 0 0 0">
         <div class="buttons align-items-center">
           <button class="gamebuttons" id="newRound" onclick="newRound()">New Game</button>
           <button class="gamebuttons" id="hitMe" onclick="hitMe()">Hit Me</button>
           <button class="gamebuttons" id="stand" onclick="stand()">Stand</button>
-        </div>
-
-        <div class="row align-items-center" id="coinDisplayParent"></div>
-        
+        </div>            
         <div class="row align-items-center" style="padding-right: 15px">
           <div>Your bet:</div>
           <input type="text" id="bet" size="5" style="margin: 0 15px 0 5px"/>
           <div style="margin-right: 5px">Current Balance:</div>
           <div id="money" style="min-width: 50px; font-weight: 900;"></div>
-        </div>
-
+        </div>      
       </div>
     </div>      
 
     <div class="row justify-content-center">
-      <div class="col-6 spacer1 pic-frame" id="gameResult" style="font-weight: 900;"></div>
+      <div class="row fixedWidth justify-content-end align-items-center" style="padding: 0 0 0 0">       
+        <div class="row align-items-center" id="coinDisplayParent" style="margin: 5px 15px -6px 5px; min-height: 30px;"></div>
+      </div>
+    </div> 
+
+    <div class="row justify-content-center">
+      <div class="fixedWidth align-items-center spacer1 pic-frame" id="gameResult" style="font-weight: 900;"></div>
     </div>
 
   </section>
